<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">MovieDetail</string>
    <string name="movie_name">Game Of Thrones</string>
    <string name="movie_description">Be sure to review it thoroughly before you submit. All criteria must "meet specifications"</string>
    <string name="movie_rating_text">7.0/10</string>
    <string name="movie_time">120min</string>
    <string name="movie_favorite">Mark As favorite</string>
    <string name="movie_year">2015</string>
    <string name="sort_by_popularity">Popular</string>
    <string name="sort_by_rated">Highest Rated</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">share</string>

<!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings Preference -->
    <string name="pref_movies" translatable="false">Movie settings</string>
    <string name="pref_sort" translatable="false">popularity</string>
    <string name="pref_sort_default" translatable="false">popularity.desc</string>

    <string name="pref_popularity" translatable="false">popular</string>
    <string name="pref_rating" translatable="false">rating</string>

    <string name="pref_rating_value" translatable="false">vote_average.desc</string>
    <string name="pref_popular_value" translatable="false">popularity.desc</string>


</resources>
