<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.techtach.movieapp.DetailFragment">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:gravity="center_vertical"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingTop="24dp"
                android:text="@string/movie_name"
                android:textColor="@color/title_color"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/movie_content"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/movie_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/chappie" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/movie_details_texts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_year"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/movie_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/movie_time"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/movie_rating_text"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/movie_description_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/movie_description_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_description"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/movie_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_trailor_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=" Trailers"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <ListView
                            android:id="@+id/movie_trailer_listView"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"></ListView>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_favorite_white_48dp"
        app:backgroundTint="@color/fav_button"
        app:borderWidth="0dp"
        app:layout_anchor="@id/title"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>